src/objects/Payment_History__c.object
<CustomObject>
    <description>HFS Recovery (NRC)</description>
    <fields>
        <fullName>Account_Balance_Type__c</fullName>
        <description>HFS Recovery</description>
        <label>Account Balance Type</label>
        <picklist>
            <picklistValues>
                <fullName>Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Off</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Charge_Off_Amount__c</fullName>
        <description>CCG Recovery</description>
        <label>Charge Off Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <description>HFS Recovery</description>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Record__c</fullName>
        <description>HFS Recovery</description>
        <label>Payment Record</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Payment Histories</relationshipLabel>
        <relationshipName>Payment_Histories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <description>HFS Recovery</description>
        <label>Received Date</label>
        <type>Date</type>
    </fields>
    <label>Payment History</label>
    <nameField>
        <displayFormat>A-{000}</displayFormat>
        <label>Payment History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Must_not_enter_both_payment_and_CO</fullName>
        <active>true</active>
        <description>HFS Recovery</description>
        <errorConditionFormula>(isblank(Payment_Amount__c) &amp;&amp; isblank(Charge_Off_Amount__c))||(Payment_Amount__c!=0 &amp;&amp; Charge_Off_Amount__c!=0)</errorConditionFormula>
        <errorMessage>You must enter payment amount or charge off amount</errorMessage>
    </validationRules>
</CustomObject>